create events, add attendees
