# src/main/java/com/rsvpplaner/repository/model/Event.java
@@ -1,19 +1,23 @@
 package com.rsvpplaner.repository.model;
 
 import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.FetchType;
 import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
 import jakarta.persistence.OneToMany;
-import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
 import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import rsvplaner.v1.model.EventType;
 
+@Table(name = "event")
 @Entity
 @Getter
 @Setter
@@ -23,14 +27,31 @@ import lombok.Setter;
 public class Event {
 
     @Id
+    @Column(name = "id")
     private String id;
 
+    @Enumerated(EnumType.STRING)
+    @Column(name = "event_type")
+    private EventType eventType;
+
+    @Column(name = "title")
     private String title;
+
+    @Column(name = "description")
     private String description;
+
+    @Column(name = "location")
     private String location;
+
+    @Column(name = "organizer_email")
     private String organizerEmail;
+
+    @Column(name = "organizer_name")
     private String organizerName;
 
-    @OneToMany(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
+    @OneToMany(fetch = FetchType.EAGER, mappedBy = "event", cascade = CascadeType.ALL)
     private List<EventParticipant> eventParticipants;
+
+    @OneToMany(fetch = FetchType.EAGER, mappedBy = "event", cascade = CascadeType.ALL)
+    private List<EventDate> eventDates;
 }
