# src/main/java/com/rsvpplaner/repository/model/EventDate.java
@@ -5,33 +5,29 @@ import jakarta.persistence.Entity;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
-import jakarta.persistence.OneToMany;
-import jakarta.persistence.OneToOne;
 import jakarta.persistence.Table;
 import java.time.Instant;
+import java.util.Objects;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
-@Table(name = "event_participant_availability")
+@Table(name = "event_dates")
 @Entity
 @Getter
 @Setter
-@Builder
-@AllArgsConstructor
 @NoArgsConstructor
-public class EventParticipantAvailability {
+@AllArgsConstructor
+@Builder
+public class EventDate {
 
     @Id
+    @Column(name = "id")
     private String id;
 
     @ManyToOne
-    @JoinColumn(name = "event_participant_id", referencedColumnName = "id", nullable = false)
-    private EventParticipant participant;
-
-    @OneToOne
     @JoinColumn(name = "event_id", referencedColumnName = "id", nullable = false)
     private Event event;
 
@@ -40,4 +36,20 @@ public class EventParticipantAvailability {
 
     @Column(name = "end_time")
     private Instant endTime;
+
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof EventDate eventDate)) return false;
+        return Objects.equals(getId(), eventDate.getId()) && Objects.equals(
+                getEvent(), eventDate.getEvent()) && Objects.equals(getStartTime(),
+                eventDate.getStartTime()) && Objects.equals(getEndTime(),
+                eventDate.getEndTime());
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(getId(), getEvent(), getStartTime(), getEndTime());
+    }
 }
